# greenhouse-pi

./: .gitignore  LICENSE  README.md  Untitled Diagram.drawio  build.py  pyproject.toml  repository_structure_requirements.md  requirements.txt
config/: greenhouse_manager_settings.json  rf_keys.yaml
config/private-data/: .gitkeep
data/images/: .gitkeep
data/logs/: .gitkeep
docs/source/: conf.py  index.rst
src/: __to_delete__driver.py  driver.py  greenhouse_hardware_collection.py  rf_keys.yaml
src/greenhouse_manager/: __init__.py  greenhouse_data_logger.py  greenhouse_hardware_collection.py  greenhouse_manager.py  greenhouse_manager_settings.py
src/webserver/: __init__.py  app.py
src/webserver/api/: __init__.py
src/webserver/templates/: index.html
systemd/: README.md  greenhouse-manager.service  greenhouse-webserver.service
tests/: __init__.py  test_greenhouse_manager.py  test_hardware_collection.py  test_webserver.py
