[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenhouse-pi"
version = "0.1.0"
description = "Repository to manage code for Raspberry Pi controlled greenhouse."
authors = [
    {name = "Siva Movva"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bme280>=0.0.4",
    "smbus2>=0.4.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "watchdog>=3.0.0",
    "pyarrow>=14.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "RPi.GPIO>=0.7.0; sys_platform == 'linux'",
]

[project.scripts]
greenhouse-manager = "greenhouse_manager.greenhouse_manager:main"

[tool.hatch.build.targets.wheel]
packages = ["src/greenhouse_manager", "src/webserver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "RPi.*",
    "bme280.*",
    "smbus2.*",
]
ignore_missing_imports = true